--- a/cadastro-funcionario.html
+++ b/cadastro-funcionario.html
@@ -204,7 +204,7 @@
 </main>
 <script>
 // Configuração da URL base da API
-const API_BASE_URL = 'http://bicicletario-backend-env.eba-sgkfpe9s.us-east-1.elasticbeanstalk.com';
+const API_BASE_URL = 'https://bicicletario-backend.onrender.com';
 
 // Troca de abas
 const abaCadastro = document.getElementById('abaCadastro');
