--- a/login.html
+++ b/login.html
@@ -183,7 +183,7 @@ body::before {
   </main>
   <script>
     // Configuração da URL base da API
-    const API_BASE_URL = 'http://bicicletario-backend-env.eba-sgkfpe9s.us-east-1.elasticbeanstalk.com';
+    const API_BASE_URL = 'https://bicicletario-backend.onrender.com';
     
     // Pegando os elementos do DOM uma vez para reutilização
     const form = document.querySelector('form');
