--- a/clear-cache.html
+++ b/clear-cache.html
@@ -8,7 +8,7 @@
     <h1>Teste de Configuração</h1>
     <p id="url-atual"></p>
     <script>
-        const API_BASE_URL = 'http://bicicletario-backend-env.eba-sgkfpe9s.us-east-1.elasticbeanstalk.com';
+        const API_BASE_URL = 'https://bicicletario-backend.onrender.com';
         document.getElementById('url-atual').textContent = 'URL configurada: ' + API_BASE_URL;
         console.log('URL da API:', API_BASE_URL);
     </script>
