--- a/cadastrobicicletario.html
+++ b/cadastrobicicletario.html
@@ -673,7 +673,7 @@
 
     function mostrarCartaoAcesso(cadastro, fotoBase64Data, fotoBikeBase64Data) {
       document.getElementById('modalCartao').style.display = 'flex';
-      const fotoPadrao = 'https://cdn-icons-png.flaticon.com/512/149/149071.png'; 
+      const fotoPadrao = 'https://via.placeholder.com/150x150/cccccc/666666?text=Foto'; 
       const cartaoFotoEl = document.getElementById('cartaoFoto');
       const cartaoFotoBikeEl = document.getElementById('cartaoFotoBike');
 
