--- a/listadecadastro.html
+++ b/listadecadastro.html
@@ -67,7 +67,7 @@
       <div id="cartaoAcesso" class="cartao-acesso">
         <h3 class="cartao-titulo">Cartão de Acesso - Bicicletário</h3>
         <div class="cartao-foto-container">
-          <img id="cartaoFoto" src="imagens/default-user.png" alt="Foto do Proprietário" class="cartao-foto">
+          <img id="cartaoFoto" src="https://via.placeholder.com/150x150/cccccc/666666?text=Foto" alt="Foto do Proprietário" class="cartao-foto">
         </div>
         <p><strong>ID:</strong> <span id="cartaoId"></span></p>
         <p><strong>Nome:</strong> <span id="cartaoNome"></span></p>
