--- a/admin.html
+++ b/admin.html
@@ -22,10 +22,12 @@
         <select id="adminName" required>
           <option value="">Selecione...</option>
           <option value="Matheus Oliveira">Matheus Oliveira</option>
-          <option value="Wenderson">Wenderson</option>
-          <option value="Shaiene">Shaiene</option>
-          <option value="Joice">Joice</option>
-          <option value="Marcelo Damaceno">Marcelo Damaceno</option>
+          <option value="Wenderson da silva soares">Wenderson da silva soares</option>
+          <option value="Joice barbosa nascimento">Joice barbosa nascimento</option>
+          <option value="Marcelo damasceno de oliveira">Marcelo damasceno de oliveira</option>
+          <option value="Shaiene maiara ferreira de oliveira">Shaiene maiara ferreira de oliveira</option>
+          <option value="Jorge luiz costa dos santos">Jorge luiz costa dos santos</option>
+          <option value="Marcelo da silva rocha">Marcelo da silva rocha</option>
         </select>
         <label for="adminLogin">Login:</label>
         <input type="text" id="adminLogin" required autocomplete="username">
