--- a/admin.html
+++ b/admin.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Painel do Administrador - Bicicletário</title>
   <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="css/login-admin.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 </head>
 <body>
   <header class="header">
@@ -18,34 +20,67 @@
   </header>
   <main>
     <section id="adminLoginSection" class="admin-section">
-      <h2>Acesso Restrito</h2>
-      <form id="adminLoginForm">
-        <label for="adminName">Selecione seu nome:</label>
-        <select id="adminName" required>
-          <option value="">Selecione...</option>
-          <option value="Matheus Oliveira">Matheus Oliveira</option>
-          <option value="Wenderson da silva soares">Wenderson da silva soares</option>
-          <option value="Joice barbosa nascimento">Joice barbosa nascimento</option>
-          <option value="Marcelo damasceno de oliveira">Marcelo damasceno de oliveira</option>
-          <option value="Shaiene maiara ferreira de oliveira">Shaiene maiara ferreira de oliveira</option>
-          <option value="Jorge luiz costa dos santos">Jorge luiz costa dos santos</option>
-          <option value="Marcelo da silva rocha">Marcelo da silva rocha</option>
-        </select>
-        <label for="adminLogin">Login:</label>
-        <input type="text" id="adminLogin" required autocomplete="username">
-        <label for="adminSenha">Senha:</label>
-        <input type="password" id="adminSenha" required autocomplete="current-password">
-        <button type="submit">Entrar</button>
-      </form>
-      <div id="adminLoginMsg" class="msg"></div>
+      <div class="login-admin-container">
+        <form id="adminLoginForm" class="login-admin-form">
+          <h2>Login Administrador</h2>
+          <div class="input-box">
+            <select id="adminName" required>
+              <option value="">Selecione seu nome...</option>
+              <option value="Matheus Oliveira">Matheus Oliveira</option>
+              <option value="Wenderson da silva soares">Wenderson da silva soares</option>
+              <option value="Joice barbosa nascimento">Joice barbosa nascimento</option>
+              <option value="Marcelo damasceno de oliveira">Marcelo damasceno de oliveira</option>
+              <option value="Shaiene maiara ferreira de oliveira">Shaiene maiara ferreira de oliveira</option>
+              <option value="Jorge luiz costa dos santos">Jorge luiz costa dos santos</option>
+              <option value="Marcelo da silva rocha">Marcelo da silva rocha</option>
+            </select>
+            <i class='bx bxs-user'></i>
+          </div>
+          <div class="input-box">
+            <input type="text" id="adminLogin" placeholder="Login" required autocomplete="username">
+            <i class='bx bxs-user'></i>
+          </div>
+          <div class="input-box">
+            <input type="password" id="adminSenha" placeholder="Senha" required autocomplete="current-password">
+            <i class='bx bxs-lock-alt'></i>
+          </div>
+          <div class="forgot-link">
+            <a href="#" tabindex="-1">Esqueceu a senha?</a>
+          </div>
+          <button type="submit" class="btn">Entrar</button>
+          <div id="adminLoginMsg" class="msg"></div>
+        </form>
+      </div>
     </section>
     <section id="adminPanelSection" class="admin-section hidden">
       <div class="admin-tabs">
         <button class="tab-button active" data-tab="monitoramento">Monitoramento</button>
         <button class="tab-button" data-tab="proprietarios">Proprietários</button>
+        <button class="tab-button" data-tab="auditoria">Auditoria</button>
       </div>
       <div id="monitoramentoTab" class="tab-content active">
         <h2>Monitoramento de Funcionários</h2>
+        <div class="row mb-2">
+          <div class="col-md-12 d-flex flex-wrap align-items-center gap-2">
+            <input type="text" id="buscaFuncionario" class="form-control" placeholder="Buscar funcionário..." style="max-width:200px;">
+            <select id="filtroLocal" class="form-select" style="max-width:180px;">
+              <option value="">Todos Locais</option>
+              <option value="Bicicletário">Bicicletário</option>
+              <option value="Secretaria">Secretaria</option>
+              <option value="Secretaria/Bicicletário">Secretaria/Bicicletário</option>
+              <option value="Outro">Outro</option>
+            </select>
+            <select id="filtroStatus" class="form-select" style="max-width:150px;">
+              <option value="">Todos Status</option>
+              <option value="Trabalhando">Trabalhando</option>
+              <option value="Parado">Parado</option>
+              <option value="Ausente">Ausente</option>
+            </select>
+            <input type="date" id="filtroDataInicio" class="form-control" style="max-width:150px;">
+            <input type="date" id="filtroDataFim" class="form-control" style="max-width:150px;">
+            <button id="btnExportarFuncionarios" class="btn btn-outline-success">Exportar CSV</button>
+          </div>
+        </div>
         <div class="row mb-4">
           <div class="col-md-6">
             <canvas id="graficoProdutividade"></canvas>
@@ -62,7 +97,22 @@
         <div class="row mb-4">
           <div class="col-md-12">
             <div id="tabelaMonitoramentoContainer">
-              <table id="tabelaMonitoramento" class="display" style="width:100%"></table>
+              <table id="tabelaMonitoramento" class="display" style="width:100%">
+                <thead>
+                  <tr>
+                    <th>Foto</th>
+                    <th>Nome</th>
+                    <th>Local</th>
+                    <th>Status</th>
+                    <th>Tempo Parado</th>
+                    <th>Total Mov.</th>
+                    <th>Última Movimentação</th>
+                    <th>Ranking</th>
+                    <th>Ações</th>
+                  </tr>
+                </thead>
+                <tbody></tbody>
+              </table>
             </div>
           </div>
         </div>
@@ -77,6 +127,23 @@
           <button id="btnGerarRelatorioDia">Gerar Relatório do Dia (E-mail)</button>
           <button id="btnGerarRelatorioMes">Gerar Relatório Mensal (E-mail)</button>
           <button id="btnBackup">Backup do Sistema/Banco de Dados</button>
+        </div>
+        <!-- Interface para agendamento de relatórios -->
+        <div class="row mb-4">
+          <div class="col-md-12">
+            <form id="formAgendarRelatorio" class="d-flex flex-wrap align-items-center gap-2" aria-label="Agendar envio automático de relatórios">
+              <label for="agendamentoEmail" class="form-label mb-0">E-mail para envio automático:</label>
+              <input type="email" id="agendamentoEmail" class="form-control" placeholder="E-mail" style="max-width:220px;">
+              <label for="agendamentoFrequencia" class="form-label mb-0">Frequência:</label>
+              <select id="agendamentoFrequencia" class="form-select" style="max-width:140px;">
+                <option value="diario">Diário</option>
+                <option value="semanal">Semanal</option>
+                <option value="mensal">Mensal</option>
+              </select>
+              <button type="submit" class="btn btn-primary">Agendar Relatório</button>
+            </form>
+            <div id="agendamentoMsg" class="msg mt-2"></div>
+          </div>
         </div>
       </div>
       <div id="proprietariosTab" class="tab-content">
@@ -95,6 +162,23 @@
           </div>
         </div>
       </div>
+      <div id="auditoriaTab" class="tab-content">
+        <h2>Logs de Auditoria</h2>
+        <div class="mb-3">
+          <button id="btnExportarAuditoria" class="btn btn-outline-success">Exportar Logs</button>
+        </div>
+        <table id="tabelaAuditoria" class="display" style="width:100%">
+          <thead>
+            <tr>
+              <th>Data/Hora</th>
+              <th>Admin</th>
+              <th>Ação</th>
+              <th>Detalhes</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
     </section>
     <div id="adminMsg" class="msg"></div>
     <!-- Modal para perguntar e gravar e-mail do ADM -->
@@ -105,6 +189,48 @@
         <button id="btnSalvarEmail">Salvar e Continuar</button>
       </div>
     </div>
+    <!-- Modal de edição de funcionário -->
+    <div id="modalEditarFuncionario" class="modal hidden" tabindex="-1" aria-modal="true" role="dialog" style="display:block; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.4); z-index:9999; align-items:center; justify-content:center;">
+      <div class="modal-dialog" style="background:#fff; padding:2rem; border-radius:8px; max-width:400px; margin:5% auto;">
+        <h4>Editar Funcionário</h4>
+        <input type="hidden" id="editFuncionarioId">
+        <div class="mb-2">
+          <label for="editFuncionarioNome">Nome:</label>
+          <input type="text" id="editFuncionarioNome" class="form-control" required autocomplete="off">
+        </div>
+        <div class="mb-2">
+          <label for="editFuncionarioStatus">Status:</label>
+          <select id="editFuncionarioStatus" class="form-control">
+            <option value="Trabalhando">Trabalhando</option>
+            <option value="Parado">Parado</option>
+            <option value="Ausente">Ausente</option>
+          </select>
+        </div>
+        <div class="mb-2">
+          <label for="editFuncionarioLocal">Local:</label>
+          <select id="editFuncionarioLocal" class="form-control">
+            <option value="">Selecione...</option>
+            <option value="Bicicletário">Bicicletário</option>
+            <option value="Secretaria">Secretaria</option>
+            <option value="Secretaria/Bicicletário">Secretaria/Bicicletário</option>
+            <option value="Outro">Outro</option>
+          </select>
+        </div>
+        <div class="mb-2">
+          <label for="editFuncionarioFoto">Foto (URL):</label>
+          <input type="text" id="editFuncionarioFoto" class="form-control" placeholder="Cole o link da foto ou deixe em branco">
+        </div>
+        <div class="mb-2">
+          <label>Histórico de Alterações:</label>
+          <div id="historicoAlteracoes" style="max-height:120px; overflow-y:auto; background:#f8f9fa; border:1px solid #ddd; border-radius:4px; padding:8px; font-size:0.95em;"></div>
+        </div>
+        <div class="d-flex justify-content-end mt-3">
+          <button id="btnCancelarEdicaoFuncionario" class="btn btn-secondary me-2" type="button">Cancelar</button>
+          <button id="btnSalvarEdicaoFuncionario" class="btn btn-success" type="button">Salvar</button>
+        </div>
+      </div>
+    </div>
+    <div id="toastContainer" class="position-fixed bottom-0 end-0 p-3" style="z-index: 11000;"></div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
