--- a/admin.html
+++ b/admin.html
@@ -190,7 +190,7 @@
       </div>
     </div>
     <!-- Modal de edição de funcionário -->
-    <div id="modalEditarFuncionario" class="modal hidden" tabindex="-1" aria-modal="true" role="dialog" style="display:block; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.4); z-index:9999; align-items:center; justify-content:center;">
+    <div id="modalEditarFuncionario" class="modal hidden" tabindex="-1" aria-modal="true" role="dialog" style="position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.4); z-index:9999; align-items:center; justify-content:center;">
       <div class="modal-dialog" style="background:#fff; padding:2rem; border-radius:8px; max-width:400px; margin:5% auto;">
         <h4>Editar Funcionário</h4>
         <input type="hidden" id="editFuncionarioId">
